all changes happen in project related to reset and forgot pass